--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 
     <div id="firstLetter" class="letter">
         سلام عزیزم<br>
-        هر مناسبت توی زندگیمون بهونه‌ای که بتونیم بهتر و خوب‌تر به یاد هم باشیم...
+        هر مناسبت توی زندگیمون بهونه‌ای که بتونیم بهتر و خوب‌تر به یاد هم باشیم. یادمون بیاد که دقیقاً یک سال قبل همچین موقعیت آرزو کردیم یک سال آینده رو کنار هم باشیم و دقیقاً این همون یک سال که رقم خورده. یک چیز تو زندگی خیلی بهم حس شادی و نرمی داره، اونم تصور شاد کردن تو. خب به هر دلیلی امشب فیزیکی کنار هم نیستیم ولی خب تصمیم گرفتم یه ایده خوبی بسازم و اجراش کنم.<br>
+        قبل از اینکه اصل نامه منو بخونی ازت می‌خوام دکمه پلی بزنی تا موزیک واست پلی بشه و وقتی داری گوش میدی نامه منو تو صفحه بعدی بخونی.
         <button class="button" onclick="showMusic()">پخش موزیک</button>
         <a class="button" href="#" onclick="showNextPage()">دیدن نامه اصلیم</a>
     </div>
@@ -98,8 +99,28 @@
     </div>
 
     <div id="nextPage" class="letter" style="display: none;">
-       امیدوارم الان دلت واسم ذوق کرده باشه عزیزم 😊  
-        ...
+       امیدوارم الان دلت واسم ذوق کرده باشه عزیزم 😊  <br>
+ببخشید شاید خیلی حرفه‌ای نباشه. خیلی از کدهای HTML و CSS سر در نمیارم، ولی سعی کردم ایده‌ای که تو ذهنم بود رو قدم به قدم اجرا کنم. امیدوارم الان لبت واسم بخنده و کلی خوشحال بشی 😍😁  <br>
+
+اما خب، اول از هرچیزی، دلم می‌خواد از پیشونیت 💋 کنم و بگم: عزیز دلم، ناز نازی من، مرسی که یک سال کنار من بودی. هر روز که می‌گذره، انگار یک سال تازه از نو برای من شروع می‌کنی.  <br>
+این مدت خیلی بهت سخت گذشت، خیلی اذیت شدی، خیلی ناراحت شدی. می‌دونم شاید اون‌طور که فکر می‌کردی، نتونستم اوضاع رو واست جمع کنم. ولی ازت زمان خواستم و قول دادم که کوچیک کوچیک (مثل همون دفعه که زنگ زدی و حرف زدیم...) جبران کنم. مطمئن باش این کارای کوچیک، کم‌کم به کارای بزرگ‌تر تبدیل می‌شن تا بدونی چقدر واست ارزش قائلم، زهرای عزیزم 😊  <br>
+
+خیلی به گذشته اشاره نمی‌کنم. چون خب، آهنگی که داری گوش می‌دی، دقیقاً داره به همین موضوع اشاره می‌کنه که لحظه‌های حال ما چقدر ارزشمند و مهمه!  <br>
+دلم خواست ازت تشکر کنم که یک سال کنارم بودی، با کم و کاستی‌هام ساختی، و کمکم کردی رشد کنم و مردی بشم که تو دوست داری. تو مهم‌ترین بخش زندگی منی، خواسته‌هات و حس تو برای من اولویت دارن. به همین خاطر با عشق و علاقه، دارم سمت مردی که تو همیشه دوست داری حرکت می‌کنم، فقط برای اینکه همیشه لبت بخنده 😊  <br>
+
+حالا که داریم به سال جدید نزدیک می‌شیم، شاید هدف‌گذاری دقیق برام معنای خاصی نداشته باشه. ولی می‌دونم که سال پیش‌رو، برای هردومون سال مهمیه:  <br>
+تموم شدن دانشگاه تو، تموم شدن دانشگاه من، تصمیمات مهم مثل کنکور، کار، و هزار تا چیز دیگه. امیدوارم تو این مسیر بتونم بهترین رفیق، پشتوانه، و یار تو باشم.  <br>
+
+برات آرزوهای قشنگی دارم:  <br>
+برات آرزوی سلامتی می‌کنم.  <br>
+برات آرزوی شادی می‌کنم.  <br>
+برات آرزوی موفقیت می‌کنم.  <br>
+برات آرزوی زیبایی و آرامش می‌کنم.  <br>
+
+عشق باارزش من، عاشقانه دوستت دارم، زهرای زیبای من ❤️💋  <br>
+Happy Christmas
+ <br>
+        
     </div>
 
     <script>
