--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 ببخشید شاید خیلی حرفه‌ای نباشه. خیلی از کدهای HTML و CSS سر در نمیارم، ولی سعی کردم ایده‌ای که تو ذهنم بود رو قدم به قدم اجرا کنم. امیدوارم الان لبت واسم بخنده و کلی خوشحال بشی 😍😁  <br>
 
 اما خب، اول از هرچیزی، دلم می‌خواد از پیشونیت 💋 کنم و بگم: عزیز دلم، ناز نازی من، مرسی که یک سال کنار من بودی. هر روز که می‌گذره، انگار یک سال تازه از نو برای من شروع می‌کنی.  <br>
-این مدت خیلی بهت سخت گذشت، خیلی اذیت شدی، خیلی ناراحت شدی. می‌دونم شاید اون‌طور که فکر می‌کردی، نتونستم اوضاع رو واست جمع کنم. ولی ازت زمان خواستم و قول دادم که کوچیک کوچیک (مثل همون دفعه که زنگ زدی و حرف زدیم...) جبران کنم. مطمئن باش این کارای کوچیک، کم‌کم به کارای بزرگ‌تر تبدیل می‌شن تا بدونی چقدر واست ارزش قائلم، زهرای عزیزم 😊  <br>
+این مدت خیلی بهت سخت گذشت، خیلی اذیت شدی، خیلی ناراحت شدی. می‌دونم شاید اون‌طور که فکر می‌کردی، نتونستم اوضاع رو واست جمع کنم. ولی ازت زمان خواستم و قول دادم که کوچیک کوچیک (اینجا بود که بهم زنگ زدی تو قطار....) جبران کنم. مطمئن باش این کارای کوچیک، کم‌کم به کارای بزرگ‌تر تبدیل می‌شن تا بدونی چقدر واست ارزش قائلم، زهرای عزیزم 😊  <br>
 
 خیلی به گذشته اشاره نمی‌کنم. چون خب، آهنگی که داری گوش می‌دی، دقیقاً داره به همین موضوع اشاره می‌کنه که لحظه‌های حال ما چقدر ارزشمند و مهمه!  <br>
 دلم خواست ازت تشکر کنم که یک سال کنارم بودی، با کم و کاستی‌هام ساختی، و کمکم کردی رشد کنم و مردی بشم که تو دوست داری. تو مهم‌ترین بخش زندگی منی، خواسته‌هات و حس تو برای من اولویت دارن. به همین خاطر با عشق و علاقه، دارم سمت مردی که تو همیشه دوست داری حرکت می‌کنم، فقط برای اینکه همیشه لبت بخنده 😊  <br>
